--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Pokémon Battle</title>
   
   
-  <script type="module" crossorigin src="/pokemon-combat-js/index.e37c8fbd.js"></script>
+  <script type="module" crossorigin src="/pokemon-combat-js/index.bd9fccb3.js"></script>
   <link rel="stylesheet" href="/pokemon-combat-js/index.a1407285.css">
 </head>
 
