Corrected info panels, now pokemon info can and should be displayed correctly

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,10 @@
             <div class="pBoard-center pBoard-component">
               <img src="./assets/pokemon-board/center-top.png" class="top image-render">
               <div class="poke-info-container">
-                <div class="poke-lvl"></div>
+                <div class="main-info">
+                  <div class="poke-name"></div>
+                  <div class="poke-lvl"></div>
+                </div>
                 <div class="poke-healthbar"></div>
               </div>
               <img src="./assets/pokemon-board/center-bottom.png" class="bottom image-render">
@@ -44,7 +47,10 @@
             <div class="pBoard-center pBoard-component">
               <img src="./assets/pokemon-board/center-top.png" class="bottom image-render">
               <div class="poke-info-container">
-                <div class="poke-lvl"></div>
+                <div class="main-info">
+                  <div class="poke-name"></div>
+                  <div class="poke-lvl"></div>
+                </div>
                 <div class="poke-healthbar"></div>
               </div>
               <img src="./assets/pokemon-board/center-bottom.png" class="bottom image-render">
@@ -60,7 +66,7 @@
       <img class="message-board-left image-render" src="./assets/message-board/message-board-left.png">
       <div class="message-board-middle">
         <img class="image-render" src="./assets/message-board/message-board-top.png">
-        <div class="message-board-info"></div>
+        <div class="message-board-info">What should Ditto do?</div>
         <img class="image-render" src="./assets/message-board/message-board-bottom.png">
       </div>
       <img class="message-board-right image-render" src="./assets/message-board/message-board-right.png">
