--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="battle-screen-holder">
+  <div class="battle-screen-holder overlay">
     <div class="battle-screen">
       <img class="pokeBackground image-render" src="./assets/Ocean-Day.png">
       <div class="pokemon-bars-holder">
@@ -34,12 +34,10 @@
             <img src="./assets/pokemon-board/top-bar-right-side.png"
               class="pBoard-right-side pBoard-component image-render">
           </div>
-          <img class="poke-sprite poke-front image-render"
-            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png">
+          <img class="poke-sprite poke-front image-render" src="">
         </div>
         <div class="field-side bottom">
-          <img class="poke-sprite poke-back image-render"
-            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/132.png">
+          <img class="poke-sprite poke-back image-render" src="">
           <!-- Bottom Bar -->
           <div class="pokemon-board bottom overlay">
             <img src="./assets/pokemon-board/bottom-bar-left-side.png"
@@ -66,7 +64,7 @@
       <img class="message-board-left image-render" src="./assets/message-board/message-board-left.png">
       <div class="message-board-middle">
         <img class="image-render" src="./assets/message-board/message-board-top.png">
-        <div class="message-board-info">What should Ditto do?</div>
+        <div class="message-board-info"></div>
         <img class="image-render" src="./assets/message-board/message-board-bottom.png">
       </div>
       <img class="message-board-right image-render" src="./assets/message-board/message-board-right.png">
