Added backgrounds, and background random selection. Added start button too.

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,10 @@
 
 <body>
   <div class="battle-screen-holder overlay">
+    <button class="start-button">Start Game</button>
+    <img class="screen-cover" src="./backgrounds/screen-cover.png">
     <div class="battle-screen">
-      <img class="pokeBackground image-render" src="./assets/Ocean-Day.png">
+      <img class="pokeBackground image-render" src="./backgrounds/Ocean/Ocean-Day.png">
       <div class="pokemon-bars-holder">
         <div class=" field-side top">
           <!-- Top Bar -->
@@ -34,10 +36,10 @@
             <img src="./assets/pokemon-board/top-bar-right-side.png"
               class="pBoard-right-side pBoard-component image-render">
           </div>
-          <img class="poke-sprite poke-front image-render" src="">
+          <img class="poke-sprite poke-front image-render">
         </div>
         <div class="field-side bottom">
-          <img class="poke-sprite poke-back image-render" src="">
+          <img class="poke-sprite poke-back image-render">
           <!-- Bottom Bar -->
           <div class="pokemon-board bottom overlay">
             <img src="./assets/pokemon-board/bottom-bar-left-side.png"
