--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <title>Pokémon Battle</title>
   
   
-  <script type="module" crossorigin src="/pokemon-combat-js/index.47ee3234.js"></script>
-  <link rel="stylesheet" href="/pokemon-combat-js/index.2b1e1edb.css">
+  <script type="module" crossorigin src="/pokemon-combat-js/index.76900c5a.js"></script>
+  <link rel="stylesheet" href="/pokemon-combat-js/index.d431271c.css">
 </head>
 
 <body>
   <div class="battle-screen-holder overlay">
+    <button class="start-button">Start Game</button>
+    <img class="screen-cover" src="./backgrounds/screen-cover.png">
     <div class="battle-screen">
       <img class="pokeBackground image-render" src="./backgrounds/Ocean/Ocean-Day.png">
       <div class="pokemon-bars-holder">
