--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <div class="battle-screen-holder overlay">
     <button class="start-button">Start Game</button>
     <img class="screen-cover" src="./backgrounds/screen-cover.png">
+    <img class="title" src="./pokeLogo.png">
     <div class="battle-screen">
       <img class="pokeBackground image-render" src="./backgrounds/Ocean/Ocean-Day.png">
       <div class="pokemon-bars-holder">
