--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <title>Pokémon Battle</title>
   
   
-  <script type="module" crossorigin src="/pokemon-combat-js/index.76900c5a.js"></script>
-  <link rel="stylesheet" href="/pokemon-combat-js/index.d431271c.css">
+  <script type="module" crossorigin src="/pokemon-combat-js/index.a8c4a740.js"></script>
+  <link rel="stylesheet" href="/pokemon-combat-js/index.00cbd862.css">
 </head>
 
 <body>
   <div class="battle-screen-holder overlay">
     <button class="start-button">Start Game</button>
     <img class="screen-cover" src="./backgrounds/screen-cover.png">
+    <img class="title" src="./pokeLogo.png">
     <div class="battle-screen">
       <img class="pokeBackground image-render" src="./backgrounds/Ocean/Ocean-Day.png">
       <div class="pokemon-bars-holder">
